# unity-voice

./: CMakeLists.txt  README.md  build.sh  run.sh  run_on_device.sh
cmake/: FindValgrind.cmake
data/: CMakeLists.txt  com.canonical.Unity.Voice.service.in  com.canonical.Unity.Voice.xml  unity-voice-service.conf.in  unity-voice.conf.in
debian/: changelog  control  copyright  libunityvoice1-dev.install  libunityvoice1.install  libunityvoice1.symbols  rules  unity-voice-autopilot.install  unity-voice-service.install
src/: AdaptorInclude.h  CMakeLists.txt  DBusTypes.h  VoiceService.cpp  config.h.in  main.cpp
src/common/: DBusTypes.h
src/libunityvoice/: CMakeLists.txt  DBusTypes.cpp  DBusTypes.h  PronounceDict.cpp  PronounceDict.h  UnityVoice.cpp  UnityVoice.h  libunityvoice.pc.in
src/service/: AdaptorInclude.h  CMakeLists.txt  Localisation.h  PronounceDict.cpp  PronounceDict.h  VoiceService.cpp  VoiceService.h  main.cpp
tests/: CMakeLists.txt  TestPronounceDict.cpp  TestSphinx.cpp  TestVoiceService.cpp  main.cpp
tests/autopilot/: setup.py
tests/autopilot/unity_voice/: __init__.py
tests/autopilot/unity_voice/dbus_interface/: __init__.py
tests/autopilot/unity_voice/dbus_interface/tests/: __init__.py  test_voice.py
tests/data/: test-pronounce-dict-hashes.dic  test-pronounce-dict-htk.dic  test-pronounce-dict-lowercase.dic  test-pronounce-dict-semicolon.dic  valgrind.suppression
tests/data/sounds/: auto-adjust.raw  color-balance.raw  open-tab.raw  open-terminal.raw  system-settings.raw
